sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:17: error: illegal start of simple expression
  }
  ^AlgCocktailSort1:18: error: 'while' expected but '}' found.
} 
^